# pyconfigurathon

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/absolute/: config.py  main.py
examples/relative/: main.py
examples/relative/configuration/: config.py  settings.json
pyconfigurathon/: configurator.py
tests/: config.py  first_speed_test.py  second_speed_test.py  test_configurator.py
