[tool.poetry]
name = "pyconfigurathon"
version = "0.1.1"
description = "Simple python package to use a json file as a configuration file"
authors = ["JermaineDavy"]
maintainers = ["Jermaine Davy"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JermaineDavy/pyconfigurathon"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
